feat(product): implement distributed locking using Redisson